# SteveRun

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-windows-platform.yml
binary/: SteveRun
binary/resources/models/_blocks/: diamondOre.mtl  emeraldOre.mtl  goldOre.mtl  ironOre.mtl  lapisOre.mtl
binary/resources/models/_mobs/: creeper.mtl
binary/resources/shaders/: fshader.glsl  vshader.glsl
compiler/MinGW/var/lib/mingw-get/data/: sysroot-0-002-a7c6-d7dbb5.xml
include/core/destroy/: Destroy.h
include/core/features/: FrameBuffer.h  ScreenMode.h  ToggleSound.h
include/core/init/: Init.h
include/core/variables/: Variables.h
include/graphics/lights/: Lights.h
include/graphics/models/: Models.h  ModelsManager.h
include/graphics/renders/enemy/: RenderEnemy.h
include/graphics/renders/game/: CallbacksGame.h  RenderGame.h
include/graphics/renders/menu/: CallbacksMenu.h  RenderMenu.h
include/graphics/shaders/: Shaders.h
include/graphics/textures/: Textures.h  TexturesManager.h  TexturesResources.h
src/: Model.h  Shaders.cpp  Shaders.h  main.cpp
src/core/destroy/: Destroy.cpp
src/core/features/: FrameBuffer.cpp  ScreenMode.cpp  ToggleSound.cpp
src/core/init/: Init.cpp
src/core/variables/: Variables.cpp
src/graphics/lights/: Lights.cpp
src/graphics/models/: Models.cpp  ModelsManager.cpp
src/graphics/renders/enemy/: RenderEnemy.cpp
src/graphics/renders/game/: CallbacksGame.cpp  RenderGame.cpp
src/graphics/renders/menu/: CallbacksMenu.cpp  RenderMenu.cpp
src/graphics/shaders/: ShadersManager.cpp
src/graphics/textures/: TexturesManager.cpp
src/init/: Init.cpp  Init.h
src/lights/: Lights.h
src/models/: Models.h  ModelsManager.cpp
src/shaders/: ShadersManager.cpp  ShadersManager.h
src/textures/: Textures.h  TexturesManager.cpp
